# VoteReach

./: .replit  README.md  aaron.html  config.py  cookie.js  datareader.py  index.html  jala.html  main.py  owen.html  pyproject.toml  style.css  userdata.txt
static/: cookie.js  leaderboard_style.css  sign_up_style.css  style.css
templates/: check_email.html  email.html  index.html  leaderboard.html  linkerIndex.html  sign_up.html  test_bed.html
