[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["RebornMaster <asmith10@dekalbcentral.net>"]
description = ""
name = "votereach-1"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
